<resources>
    <string name="app_name">SimpleWorkout</string>
    <string name="start_workout">Start workout</string>
    <string name="edit_workouts">Edit workouts</string>
    <string name="select_workout">Select Workout</string>
    <string name="start_selected_workout">Start selected workout</string>
    <string name="edit_selected_workout">Edit selected workout</string>
    <string name="add_new_workout">Add new workout</string>
    <string name="name_of_the_workout">Name of the workout</string>
    <string name="settings">Settings</string>
    <string name="addExercise">Add exercise</string>
    <string name="newExercise">Create new exercise</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="add_selected_exercise">Add selected exercise</string>
    <string name="edit_workout">Edit workout</string>
    <string name="workout_overview">Workout overview</string>
    <string name="save_exercise">Save exercise</string>
    <string name="name_of_the_exercise">Name of the exercise</string>
    <string name="measure_in_time">Measure in time</string>
    <string name="create_exercise">Create exercise</string>
    <string name="next_rep_exercise">Next set/exercise</string>
    <string name="number_of_reps_duration">Number of reps / duration</string>
    <string name="weight">Weight</string>
    <string name="number_of_sets">Number of sets</string>
    <string name="delete_selected_exercise">Delete selected exercise</string>
    <string name="save_workout">Save workout</string>
    <string name="well_done_workout_complete">Well done! Workout complete!</string>
    <string name="next_exercise">Next exercise</string>
    <string name="next_set">Next set</string>
</resources>
